ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Merge_Fields__c/CnP_PaaS__Broadcaster_Merge_Fields__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Broadcaster Merge Fields</label>
    <nameField>
        <label>Broadcaster Merge Fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Broadcaster Merge Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>