ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Merge_Fields__c/fields/CnP_PaaS__Broadcaster_List__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Broadcaster_List__c</fullName>
    <label>Broadcaster List</label>
    <referenceTo>CnP_PaaS__Broadcaster_List__c</referenceTo>
    <relationshipName>Broadcaster_Merge_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>