ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Merge_Fields__c/fields/CnP_PaaS__Field_Id__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Field_Id__c</fullName>
    <label>Field Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>