ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Merge_Fields__c/fields/CnP_PaaS__order__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__order__c</fullName>
    <label>order</label>
    <length>120</length>
    <type>Text</type>
</CustomField>