ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Merge_Fields__c/fields/CnP_PaaS__show__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__show__c</fullName>
    <defaultValue>false</defaultValue>
    <label>show</label>
    <type>Checkbox</type>
</CustomField>