ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Merge_Fields__c/fields/CnP_PaaS__Tag__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Tag__c</fullName>
    <label>Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>